meet the executive

--- a/index.html
+++ b/index.html
@@ -142,26 +142,17 @@
       <div class="cover">
         <div class="container my-2">
           <div class="row">
-            <div class="col-md-6 my-4 event">
+            <div class="col-md-6 my-4">
               <div class="titles" id="updates">
-                <h4><a href="#!">City Updates</a></h4>
+                <h4><a href="#!">Meet the Executive Director</a></h4>
               </div>
-              <div class="d-flex align-items-start py-4 border-bottom" id="p4">
-                <div class="col-md-6">
-                  <img class="img-fluid rounded-sm" src="resources/images/update.jpg" alt="1st Update">
-                </div>
-                <div class="col-md-6">
-                  <h5><a href="#!">Demajobs Launching</a></h5>
-                  <p class="text-muted">
-                    <i class="fas fa-calendar-day"></i> Sunday,....
-                  </p>
-                  <p>Launching</p>
-                  <p class="small">...</p>
-                </div>
+              <div class="py-4 border-bottom">
+                <img class="img-fluid rounded-sm" src="resources/images/executived.jpg" alt="img of Rev.">
+                <p>Rev. Dennis J. Boadu</p>
               </div>
             </div>
             <div class="col-md-6 my-4">
-              <div class="titles" id="meeting">
+              <div class="titles">
                 <h4><a href="#!">City Info</a></h4>
               </div>
               <div class="list-group">
