--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <h4><a href="#!">Meet the Executive Director</a></h4>
               </div>
               <div class="py-4 border-bottom">
-                <img class="img-fluid rounded-sm" src="resources/images/executived.jpg" alt="img of Rev.">
+                <img class="img-fluid rounded-sm" src="resources/images/executived.jpeg" alt="img of Rev.">
                 <p>Rev. Dennis J. Boadu</p>
               </div>
             </div>
