--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
       <div class="cover">
         <div class="container my-2">
           <div class="row">
-            <div class="col-md-6 my-4">
+            <div class="col-md-6 text-center my-4">
               <div class="titles" id="updates">
                 <h4><a href="#!">Meet the Executive Director</a></h4>
               </div>
               <div class="py-4 border-bottom">
                 <img class="img-fluid rounded-sm" src="resources/images/executived.jpeg" style="border-radius: 50%" alt="img of Rev.">
-                <p>Rev. Dennis J. Boadu</p>
+                <h3>Rev. Dennis J. Boadu</h3>
               </div>
             </div>
             <div class="col-md-6 my-4">
