--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <h4><a href="#!">Meet the Executive Director</a></h4>
               </div>
               <div class="py-4 border-bottom">
-                <img src="resources/images/executived.jpeg" style="border-radius: 50%" alt="img of Rev.">
+                <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%" alt="img of Rev.">
                 <h2 class="text-center">Rev. Dennis J. Boadu</h2>
               </div>
             </div>
