--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               </div>
               <div class="py-4 border-bottom">
                 <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%" alt="img of Rev.">
-                <h2 class="text-center">Rev. Dennis J. Boadu</h2>
+                <p class="text-center font-weight-bold lead">Rev. Dennis J. Boadu</p>
               </div>
             </div>
             <div class="col-md-6 my-4">
