--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
               </div>
               <div class="py-4 border-bottom">
                 <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%" alt="img of Rev.">
-                <p class="text-center font-weight-bold lead">Rev. Dennis J. Boadu</p>
+                <p class="text-center font-weight-bold lead py-2">Rev. Dennis J. Boadu</p>
+                <a href="#!"><button class="btn btn-md btn-secondary" type="button" name="button">Learn more</button></a>
               </div>
             </div>
             <div class="col-md-6 my-4">
