--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
               <div class="titles" id="updates">
                 <h4><a href="#!">Meet the Executive Director</a></h4>
               </div>
-              <div class="py-4 border-bottom">
+              <div class="py-4 border-bottom text-center">
                 <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%" alt="img of Rev.">
-                <p class="text-center font-weight-bold lead py-2">Rev. Dennis J. Boadu</p>
+                <p class="font-weight-bold lead py-2">Rev. Dennis J. Boadu</p>
                 <a href="#!"><button class="btn btn-md btn-secondary" type="button" name="button">Learn more</button></a>
               </div>
             </div>
