--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <h4><a href="#!">Meet the Executive Director</a></h4>
               </div>
               <div class="py-4 border-bottom text-center">
-                <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%"  width="300" alt="img of Rev.">
+                <img class="img-fluid rounded-lg" src="resources/images/executived.jpeg" width="250" alt="img of Rev.">
                 <p class="font-weight-bold lead py-2">Rev. Dennis J. Boadu</p>
                 <a href="#!"><button class="btn btn-md btn-secondary" type="button" name="button">Learn more</button></a>
               </div>
