--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </button>
         </div>
       </nav>
-      <!-- Slideshow -->
+      <!-- Main Body -->
       <div id="slideshow">
         <div class="mb-4">
           <div id="carouselCaptions" class="carousel slide" data-ride="carousel">
@@ -139,7 +139,7 @@
           </div>
         </div>
       </div>
-      <div class="cover">
+      <div id="profile" class="cover">
         <div class="container my-2">
           <div class="row">
             <div class="col-md-6 my-4">
@@ -149,7 +149,47 @@
               <div class="py-4 border-bottom text-center">
                 <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%"  width="275" alt="img of Rev.">
                 <p class="font-weight-bold lead py-2">Rev. Dennis J. Boadu</p>
-                <a href="#!"><button class="btn btn-md btn-secondary" type="button" name="button">Learn more</button></a>
+                <button class="btn btn-md btn-secondary" type="button" name="button" data-toggle="modal" data-target="#exe-profile">Learn more</button>
+              </div>
+              <div class="modal" id="exe-profile" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="modalCenteredLabel">Profile of Rev. Dennis J. Boadu</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <p>
+                        Rev. Dennis J. Boadu, (Executive Director).  <br>
+                        He is currently the Koforidua Diocesan Synod Secretary of
+                        the Methodist Church Ghana, the Superintendent Minister of
+                        the Nsukwao Circuit, Koforidua, Member of the National Council,
+                        Scripture Union Ghana (S.U.), The Eastern Regional Chairman
+                        of the Scripture Union (S.U.) Ghana and a Jerusalem Pilgrim (JP <br><br>
+                        As an Executive Director, is responsible for providing spiritual
+                        oversight of the entire operations of the “Demajobs City’.
+                        The primary duties are as follows. <br>
+                        To prepare and keep an up-to-date
+                        report on all the spiritual undertakings of the ‘Demajobs City’, <br>
+                        Offer direction as to the use of the facilities of 'Demajobs 	City'. <br>
+                        Be well versed in new trends in Christian Education and worship. <br><br>
+                        He stands for fairness and justice and also believes in the Bible
+                        is a guide in our daily lives.
+                        Very Rev. Dennis Joseph Boadu’s Christian journey has been very
+                        eventful. He served as a chaplain for the Mfantsipim School
+                        (first Secondary School in 	Ghana) for ten years (1998-2008).
+                        A missionary to Italy, working with the Waldensian Evangelical
+                        Church in Rome and Bologna/Modena for five years (2009-2014).
+                        Synod Secretary for the Methodist Church from (2019-2023)
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-md-6 my-4">
