--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                 <li class="nav-item active"><h5><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="history.html">History</a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="about.html">About Us</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#!">The Team</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#!">Divisions</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="team.html">The Team</a></h5></li>
               </ul>
             </div>
           </div>
@@ -162,12 +161,12 @@
                     </div>
                     <div class="modal-body">
                       <p>
-                        Rev. Dennis J. Boadu, (Executive Director).  <br>
+                        Rev. Dennis J. Boadu, (Executive Director).  <br><br>
                         He is currently the Koforidua Diocesan Synod Secretary of
                         the Methodist Church Ghana, the Superintendent Minister of
                         the Nsukwao Circuit, Koforidua, Member of the National Council,
                         Scripture Union Ghana (S.U.), The Eastern Regional Chairman
-                        of the Scripture Union (S.U.) Ghana and a Jerusalem Pilgrim (JP <br><br>
+                        of the Scripture Union (S.U.) Ghana and a Jerusalem Pilgrim (JP) <br><br>
                         As an Executive Director, is responsible for providing spiritual
                         oversight of the entire operations of the “Demajobs City’.
                         The primary duties are as follows. <br>
@@ -197,17 +196,17 @@
                 <h4><a href="#!">City Info</a></h4>
               </div>
               <div class="list-group">
-                <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="intro.html" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="d-flex w-100 justify-content-between">
                     <h5 class="mb-1">Introduction</h5>
                   </div>
                 </a>
-                <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="phases.html" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Overview</h5>
+                    <h5 class="mb-1">Project Phases</h5>
                   </div>
                 </a>
-                <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="location.html" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="d-flex w-100 justify-content-between">
                     <h5 class="mb-1">Location</h5>
                   </div>
@@ -236,7 +235,7 @@
               <h5 class="my-3">Featured Links</h5>
               <p><a href="history.html">History</a></p>
               <p><a href="about.html">About Us</a></p>
-              <p><a href="#!">Gallery</a></p>
+              <p><a href="gallery.html">Gallery</a></p>
             </div>
             <!-- Social Media Links -->
             <div class="social col-md-4">
