--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
           </div>
         </div>
       </div>
-      <div id="profile" class="cover">
+      <div class="cover">
         <div class="container my-2">
           <div class="row">
-            <div class="col-md-6 my-4">
-              <div class="titles" id="updates">
+            <div class="col-md-6 my-4" id="profile">
+              <div class="titles">
                 <h4><a href="#!">Meet the Executive Director</a></h4>
               </div>
               <div class="py-4 border-bottom text-center">
@@ -191,7 +191,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 my-4">
+            <div class="col-md-6 my-4" id="cityinfo">
               <div class="titles">
                 <h4><a href="#!">City Info</a></h4>
               </div>
