--- a/intro.html
+++ b/intro.html
@@ -33,7 +33,7 @@
           <!--Breadcrumb Command -->
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.html">Back</a></li>
+              <li class="breadcrumb-item"><a href="index.html#cityinfo">Back</a></li>
               <li class="breadcrumb-item active" aria-current="page">Introduction</li>
             </ol>
           </nav>
@@ -114,7 +114,7 @@
               structures that may be put up may serve as a sustained income for
               the families of artisans who will find work there. This will in
               itself go a long way in improving the lots of people in the area
-              directly and indirectly.
+              directly and indirectly. <br><br>
             </p>
           </div>
         </div>
