--- a/location.html
+++ b/location.html
@@ -33,7 +33,7 @@
           <!--Breadcrumb Command -->
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.html">Back</a></li>
+              <li class="breadcrumb-item"><a href="index.html#cityinfo">Back</a></li>
               <li class="breadcrumb-item active" aria-current="page">Location</li>
             </ol>
           </nav>
@@ -77,8 +77,8 @@
                Apart from this Christian heritage, there is also a sense of
                attraction in terms of tourism. Cape Coast is known for its tourist
                sites and as people troop-in to the centre to work-out on themselves,
-               there would be the opportunity to experience nature.
-              
+               there would be the opportunity to experience nature. <br><br>
+
             </p>
           </div>
         </div>
