--- a/phases.html
+++ b/phases.html
@@ -33,7 +33,7 @@
           <!--Breadcrumb Command -->
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.html">Back</a></li>
+              <li class="breadcrumb-item"><a href="index.html#cityinfo">Back</a></li>
               <li class="breadcrumb-item active" aria-current="page">Project Phases</li>
             </ol>
           </nav>
@@ -64,7 +64,7 @@
                These are as follows. Development of the open field, playgrounds,
                constructions of the car park and facilities for general security.
                The phase will also see to the finishing of the entire project and
-               particularly in automating the audio/visual department. 
+               particularly in automating the audio/visual department. <br><br><br>
 
             </p>
           </div>
