--- a/team.html
+++ b/team.html
@@ -63,138 +63,141 @@
       </nav>
 
       <!-- Management Team -->
-      <p class="lead">The management team is made up of two different categories</p>
-      <br><br>
-      <h1>1</h1> <hr>
-      <div id="accordion" role="tablist">
-        <div class="card">
-          <div class="card-header" role="tab" id="resource1">
-            <h3 class="py-2">
-              <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Executive Director
-              </a>
-            </h3>
+      <div class="container">
+        <p class="lead">The management team is made up of two different categories</p>
+        <br><br>
+        <h1>1</h1> <hr>
+        <div id="accordion" role="tablist">
+          <div class="card">
+            <div class="card-header" role="tab" id="resource1">
+              <h3 class="py-2">
+                <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Executive Director
+                </a>
+              </h3>
+            </div>
+            <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="resource1">
+              <div class="card-body">
+                <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              </div>
+            </div>
           </div>
-          <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="resource1">
-            <div class="card-body">
+          <div class="card">
+            <div class="card-header" role="tab" id="resource2">
+              <h3 class="py-2">
+                <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Director of Administration
+                </a>
+              </h3>
+            </div>
+            <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="resources2">
+              <div class="card-body">
               <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="card-header" role="tab" id="resource2">
-            <h3 class="py-2">
-              <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Director of Administration
-              </a>
-            </h3>
-          </div>
-          <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="resources2">
-            <div class="card-body">
-            <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+          <div class="card">
+            <div class="card-header" role="tab" id="resource3">
+              <h3 class="py-2">
+                <a data-toggle="collapse" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                  Director of Finance
+                </a>
+              </h3>
+            </div>
+            <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="resource3">
+              <div class="card-body">
+                <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="card-header" role="tab" id="resource3">
-            <h3 class="py-2">
-              <a data-toggle="collapse" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-                Director of Finance
-              </a>
-            </h3>
-          </div>
-          <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="resource3">
-            <div class="card-body">
+          <div class="card">
+            <div class="card-header" role="tab" id="resource4">
+              <h3 class="py-2">
+                <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  Director, Prayer, Worship and Counselling
+                </a>
+              </h3>
+            </div>
+            <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="resource4">
+              <div class="card-body">
               <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="card-header" role="tab" id="resource4">
-            <h3 class="py-2">
-              <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Director, Prayer, Worship and Counselling
-              </a>
-            </h3>
-          </div>
-          <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="resource4">
-            <div class="card-body">
-            <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+          <div class="card">
+            <div class="card-header" role="tab" id="resource5">
+              <h3 class="py-2">
+                <a class="collapsed" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                  Director of Publications and Programmes
+                </a>
+              </h3>
             </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" role="tab" id="resource5">
-            <h3 class="py-2">
-              <a class="collapsed" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                Director of Publications and Programmes
-              </a>
-            </h3>
-          </div>
-          <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="resources5">
-            <div class="card-body">
-            <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" role="tab" id="resource6">
-            <h3 class="py-2">
-              <a data-toggle="collapse" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
-                Director, Catering and Hospitality
-              </a>
-            </h3>
-          </div>
-          <div id="collapseSix" class="collapse" role="tabpanel" aria-labelledby="resource6">
-            <div class="card-body">
+            <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="resources5">
+              <div class="card-body">
               <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" role="tab" id="resource6">
+              <h3 class="py-2">
+                <a data-toggle="collapse" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+                  Director, Catering and Hospitality
+                </a>
+              </h3>
+            </div>
+            <div id="collapseSix" class="collapse" role="tabpanel" aria-labelledby="resource6">
+              <div class="card-body">
+                <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" role="tab" id="resource7">
+              <h3 class="py-2">
+                <a class="collapsed" data-toggle="collapse" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                  Director of Estate
+                </a>
+              </h3>
+            </div>
+            <div id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="resource7">
+              <div class="card-body">
+              <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" role="tab" id="resource8">
+              <h3 class="py-2">
+                <a class="collapsed" data-toggle="collapse" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                  Director, Legal Affairs
+                </a>
+              </h3>
+            </div>
+            <div id="collapseEight" class="collapse" role="tabpanel" aria-labelledby="resource8">
+              <div class="card-body">
+              <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              </div>
             </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" role="tab" id="resource7">
-            <h3 class="py-2">
-              <a class="collapsed" data-toggle="collapse" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                Director of Estate
-              </a>
-            </h3>
-          </div>
-          <div id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="resource7">
-            <div class="card-body">
-            <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" role="tab" id="resource8">
-            <h3 class="py-2">
-              <a class="collapsed" data-toggle="collapse" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                Director, Legal Affairs
-              </a>
-            </h3>
-          </div>
-          <div id="collapseEight" class="collapse" role="tabpanel" aria-labelledby="resource8">
-            <div class="card-body">
-            <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
-            </div>
-          </div>
-        </div>
+        <br><br>
+        <h1>2</h1> <hr>
+        <p class="lead">
+            Board of Patrons and Patroness: This is a five-member board that serves
+            as the advisory team of the centre. The membership is composed of individuals
+            with clear understanding of the philosophy of the 'Demajobs City.'
+            These include people of diverse interests and educational fields,
+            such as:
+            Police;
+            Church Leaders;
+            University Lecturers;
+            Architects; Sociologists;
+            Medical Practitioners;
+            Legal Practitioners and Psychologists.
+        </p>
       </div>
-      <br><br>
-      <h1>2</h1> <hr>
-      <p>
-          Board of Patrons and Patroness: This is a five-member board that serves
-          as the advisory team of the centre. The membership is composed of individuals
-          with clear understanding of the philosophy of the 'Demajobs City.'
-          These include people of diverse interests and educational fields,
-          such as:
-          Police;
-          Church Leaders;
-          University Lecturers;
-          Architects; Sociologists;
-          Medical Practitioners;
-          Legal Practitioners and Psychologists.
-      </p>
+
       <!-- Footer -->
       <footer>
         <div class="container py-4">
