--- a/index.html
+++ b/index.html
@@ -103,9 +103,29 @@
           <div class="row">
             <div class="col-md-4 py-2" id="PrayerCity">
               <div class="card">
-                <a href="#!">
+                <a href="#!" data-toggle="modal" data-target="#PrayerCity">
                   <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
                 </a>
+              </div>
+              <div class="modal" id="PrayerCity" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="modalCenteredLabel">Prayer City</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <p>
+
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-md-4 py-2" id="ReformationCity">
