--- a/index.html
+++ b/index.html
@@ -102,10 +102,8 @@
         <div class="container mb-4">
           <div class="row">
             <div class="col-md-4 py-2" id="PrayerCity">
-              <div class="card">
-                <a href="#!" data-toggle="modal" data-target="#PrayerCity">
-                  <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
-                </a>
+              <div class="card" data-toggle="modal" data-target="#PrayerCity">
+                <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
               </div>
               <div class="modal" id="PrayerCity" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-scrollable" role="document">
