--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
           <div class="row">
             <div class="col-md-4 py-2" id="PrayerCity">
               <div class="card">
-                <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity" data-toggle="modal" data-target="#PrayerCity">
+                <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
+                <button type="button" name="button" data-toggle="modal" data-target="#PrayerCity"> Visit the Prayer City</button>
               </div>
               <div class="modal" id="PrayerCity" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-scrollable" role="document">
