--- a/team.html
+++ b/team.html
@@ -63,10 +63,10 @@
       </nav>
 
       <!-- Management Team -->
-      <div class="container">
+      <div class="container pt-4">
         <p class="lead">The management team is made up of two different categories</p>
         <br><br>
-        <h1>1</h1> <hr>
+        <h4>The 1st category consists of the following:</h4> <hr>
         <div id="accordion" role="tablist">
           <div class="card">
             <div class="card-header" role="tab" id="resource1">
@@ -78,7 +78,7 @@
             </div>
             <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="resource1">
               <div class="card-body">
-                <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+                <button type="button" name="button" class="btn btn-sm btn-secondary">Info. not available</button>
               </div>
             </div>
           </div>
@@ -92,7 +92,7 @@
             </div>
             <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="resources2">
               <div class="card-body">
-              <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              <button type="button" name="button" class="btn btn-sm btn-secondary">Info. not available</button>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
             </div>
             <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="resource3">
               <div class="card-body">
-                <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+                <button type="button" name="button" class="btn btn-sm btn-secondary">Info. not available</button>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
             </div>
             <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="resource4">
               <div class="card-body">
-              <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              <button type="button" name="button" class="btn btn-sm btn-secondary">Info. not available</button>
               </div>
             </div>
           </div>
@@ -134,7 +134,7 @@
             </div>
             <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="resources5">
               <div class="card-body">
-              <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              <button type="button" name="button" class="btn btn-sm btn-secondary">Info. not available</button>
               </div>
             </div>
           </div>
@@ -148,7 +148,7 @@
             </div>
             <div id="collapseSix" class="collapse" role="tabpanel" aria-labelledby="resource6">
               <div class="card-body">
-                <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+                <button type="button" name="button" class="btn btn-sm btn-secondary">Info. not available</button>
               </div>
             </div>
           </div>
@@ -162,7 +162,7 @@
             </div>
             <div id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="resource7">
               <div class="card-body">
-              <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              <button type="button" name="button" class="btn btn-sm btn-secondary">Info. not available</button>
               </div>
             </div>
           </div>
@@ -176,15 +176,16 @@
             </div>
             <div id="collapseEight" class="collapse" role="tabpanel" aria-labelledby="resource8">
               <div class="card-body">
-              <button type="button" name="button" class="btn btn-sm btn-secondary">No content available for download</button>
+              <button type="button" name="button" class="btn btn-sm btn-secondary">Info. not available</button>
               </div>
             </div>
           </div>
         </div>
         <br><br>
-        <h1>2</h1> <hr>
+        <h1>The 2nd category consists of the following:</h1> <hr>
         <p class="lead">
-            Board of Patrons and Patroness: This is a five-member board that serves
+            <span class="font-weight-bold">Board of Patrons and Patroness</span> <br>
+            This is a five-member board that serves
             as the advisory team of the centre. The membership is composed of individuals
             with clear understanding of the philosophy of the 'Demajobs City.'
             These include people of diverse interests and educational fields,
