--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div id="divisions">
         <div class="container mb-4">
           <div class="row">
-            <div class="col-md-4 py-2" id="PrayerCity">
+            <div class="col-md-4 py-2">
               <div class="card">
                 <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
                 <button type="button" name="button" data-toggle="modal" data-target="#PrayerCity"> Visit the Prayer City</button>
