--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
       <div class="container pt-4">
         <p class="lead">The management team is made up of two different categories</p>
         <br><br>
-        <h4>The 1st category consists of the following:</h4> <hr>
+        <h4>The 1st category consists of the following:</h4>
         <div id="accordion" role="tablist">
           <div class="card">
             <div class="card-header" role="tab" id="resource1">
@@ -182,7 +182,7 @@
           </div>
         </div>
         <br><br>
-        <h1>The 2nd category consists of the following:</h1> <hr>
+        <h4>The 2nd category consists of the following:</h4>
         <p class="lead">
             <span class="font-weight-bold">Board of Patrons and Patroness</span> <br>
             This is a five-member board that serves
