--- a/team.html
+++ b/team.html
@@ -63,10 +63,9 @@
       </nav>
 
       <!-- Management Team -->
-      <div class="container pt-4">
-        <p class="lead">The management team is made up of two different categories</p>
-        <br><br>
-        <h4>The 1st category consists of the following:</h4>
+      <div class="container py-3">
+        <p class="lead ">The management team is made up of two different categories</p>
+        <h4 class="py-2">The 1st category consists of the following:</h4>
         <div id="accordion" role="tablist">
           <div class="card">
             <div class="card-header" role="tab" id="resource1">
@@ -183,20 +182,18 @@
         </div>
         <br><br>
         <h4>The 2nd category consists of the following:</h4>
-        <p class="lead">
-            <span class="font-weight-bold">Board of Patrons and Patroness</span> <br>
-            This is a five-member board that serves
-            as the advisory team of the centre. The membership is composed of individuals
-            with clear understanding of the philosophy of the 'Demajobs City.'
-            These include people of diverse interests and educational fields,
-            such as:
-            Police;
-            Church Leaders;
-            University Lecturers;
-            Architects; Sociologists;
-            Medical Practitioners;
-            Legal Practitioners and Psychologists.
-        </p>
+        <p class="lead font-weight-bold py-3">Board of Patrons and Patroness</p>
+        <p>This is a five-member board that serves
+        as the advisory team of the centre. The membership is composed of individuals
+        with clear understanding of the philosophy of the 'Demajobs City.'
+        These include people of diverse interests and educational fields,
+        such as:
+        Police;
+        Church Leaders;
+        University Lecturers;
+        Architects; Sociologists;
+        Medical Practitioners;
+        Legal Practitioners and Psychologists.</p>
       </div>
 
       <!-- Footer -->
