--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="col-md-4 py-2">
               <div class="card">
                 <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
-                <button type="button" name="button" data-toggle="modal" data-target="#PrayerCity"> Visit the Prayer City</button>
+                <button class="btn-outline-dark" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Visit the Prayer City</button>
               </div>
             </div>
             <div class="col-md-4 py-2" id="ReformationCity">
