--- a/index.html
+++ b/index.html
@@ -104,21 +104,19 @@
             <div class="col-md-4 py-2">
               <div class="card">
                 <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
-                <button class="btn-outline-dark" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Visit the Prayer City</button>
+                <button class="btn-outline-dark" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Learn more</button>
               </div>
             </div>
-            <div class="col-md-4 py-2" id="ReformationCity">
+            <div class="col-md-4 py-2">
               <div class="card">
-                <a href="#!">
-                  <img class="card-img" src="resources/images/reformationcity.png" alt="image of the ReformationCity">
-                </a>
+                <img class="card-img" src="resources/images/reformationcity.png" alt="image of the ReformationCity">
+                <button class="btn-outline-dark" type="button" name="button" data-toggle="modal" data-target="#ReformationCity">Learn more</button>
               </div>
             </div>
-            <div class="col-md-4 py-2" id="AgedCity">
+            <div class="col-md-4 py-2">
               <div class="card">
-                <a href="#!">
-                  <img class="card-img img-fluid" src="resources/images/agedcity.png" alt="image of the AgedCity">
-                </a>
+                <img class="card-img img-fluid" src="resources/images/agedcity.png" alt="image of the AgedCity">
+                <button class="btn-outline-dark" type="button" name="button" data-toggle="modal" data-target="#AgedCity">Learn more</button>
               </div>
             </div>
           </div>
@@ -128,14 +126,23 @@
           <div class="modal-dialog modal-dialog-scrollable" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="modalCenteredLabel">Prayer City</h5>
+                <h5 class="modal-title font-weight-bold" id="modalCenteredLabel">Prayer City</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body">
                 <p>
+                  The sector will afford Christians the opportunity to join hands
+                  with a team of other people of prayer in other parts of the world
+                  to pray towards the accomplishment of the Great Commission. <br><br>
+                  It is a fact that many Christians express a deep hunger for prayer,
+                   but they lack the basic information on prayer in terms of its
+                   conduct and content. In general terms, the PrayerCity will be
+                   the platform for such Christians who are so burdened and consider
+                   prayer as the necessary vehicle for growing true and vibrant ministries for God. <br><br>
 
+                   <a href="#!"><button type="button" name="button">Visit the PrayerCity</button></a>
                 </p>
               </div>
               <div class="modal-footer">
@@ -144,7 +151,72 @@
             </div>
           </div>
         </div>
-
+        <div class="modal" id="ReformationCity" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title font-weight-bold" id="modalCenteredLabel">Reformation City</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>
+                  This section of the project, with the Bible as the sole authority
+                  for every matter concerning faith, conduct and salvation, will be
+                  carved in a frame of a rehab. It will be in the nature of a centre
+                  that aids individuals or groups (especially in the youth brackets)
+                  to regain the ability to go about their normal daily activities independently,
+                  yet centered on Christ. <br><br>
+                  It will give relaxation in both emotional and spiritual support forms
+                  for preventive and restorative results.  Jesus Christ is the way,
+                  the truth and the life (John 14:6a); therefore, whoever comes to
+                  know Him (the Truth) is set free from every bondage (John 8:32).
+                  In this vain, biblical therapeutic sessions to satisfy the physical,
+                  mental, work-related as well as speech and language needs which have
+                  created various void in the persons.
+                </p>
+                <a href="#!"><button type="button" name="button">Visit the ReformationCity</button></a>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal" id="AgedCity" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title font-weight-bold" id="modalCenteredLabel">Aged City</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>
+                  As the Apostle Paul admonishes in our care for the elderly (aged)
+                  (1Timothy 5:1) and a clue from Shem and Japhet (Genesis 9:23;26-27),
+                  this third section will be created. <br><br>
+                  This part of the center will offer custodial care to the aged in the
+                   form of assisted-living facilities to support them.
+                   At the initial stages, it will be run as an Adult Daycare with
+                   collaboration from the family or loved ones of the aged. With this,
+                   families will bring in their elders for a period of time and later
+                    pick them up. Meanwhile, when appropriate measures are put in place
+                    for expansion it could be turned into an Aged Home. <br><br>
+                   Hence, it will have temporary accommodation for resting; a hall to
+                   hold communal sessions; a garden for elevating emotions and prayers
+                   and recreational facilities for physical exercises or entertainment.
+                </p>
+                <a href="#!"><button type="button" name="button">Visit the AgedCity</button></a>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div id="banner" class="container">
         <div class="jumbotron">
