--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
               </div>
               <div class="py-4 border-bottom text-center">
                 <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%"  width="275" alt="img of Rev.">
-                <p class="font-weight-bold lead py-2">Rev. Dennis J. Boadu</p>
-                <button class="btn btn-md btn-secondary" type="button" name="button" data-toggle="modal" data-target="#exe-profile">Learn more</button>
+                <p class="font-weight-bold lead pt-2 pb-1">Rev. Dennis J. Boadu</p>
+                <button class="btn btn-md btn-secondary" type="button" name="button" data-toggle="modal" data-target="#exe-profile">Read more</button>
               </div>
               <div class="modal" id="exe-profile" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-scrollable" role="document">
