--- a/history.html
+++ b/history.html
@@ -45,8 +45,7 @@
                 <li class="nav-item"><h5><a class="nav-link" href="index.html">Home</a></h5></li>
                 <li class="nav-item active"><h5><a class="nav-link" href="history.html">History<span class="sr-only">(current)</span></a></h5></li>
                 <li class="nav-item"><h5><a class="nav-link" href="about.html">About Us</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#!">The Team</a></h5></li>
-                <li class="nav-item"><h5><a class="nav-link" href="#!">Divisions</a></h5></li>
+                <li class="nav-item"><h5><a class="nav-link" href="team.html">The Team</a></h5></li>
               </ul>
             </div>
           </div>
@@ -137,7 +136,7 @@
               <h5 class="my-3">Featured Links</h5>
               <p><a href="history.html">History</a></p>
               <p><a href="about.html">About Us</a></p>
-              <p><a href="#!">Gallery</a></p>
+              <p><a href="gallery.html">Gallery</a></p>
             </div>
             <!-- Social Media Links -->
             <div class="social col-md-4">
