--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
             <div class="col-md-4 py-2">
               <div class="card">
                 <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
-                <button class="btn-outline-dark" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Learn more</button>
+                <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Learn more</button>
               </div>
             </div>
             <div class="col-md-4 py-2">
               <div class="card">
                 <img class="card-img" src="resources/images/reformationcity.png" alt="image of the ReformationCity">
-                <button class="btn-outline-dark" type="button" name="button" data-toggle="modal" data-target="#ReformationCity">Learn more</button>
+                <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#ReformationCity">Learn more</button>
               </div>
             </div>
             <div class="col-md-4 py-2">
               <div class="card">
                 <img class="card-img img-fluid" src="resources/images/agedcity.png" alt="image of the AgedCity">
-                <button class="btn-outline-dark" type="button" name="button" data-toggle="modal" data-target="#AgedCity">Learn more</button>
+                <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#AgedCity">Learn more</button>
               </div>
             </div>
           </div>
